# torchy

./: CMakeLists.txt  GPT.md  Makefile  MakefileHeaderOnly  NOTES.md  PLAN.md  README.md  T.cpp  T.h  T2.cpp  T2.h  T2.sh  T4.cpp  T4.h  T4.sh  THOUGHTS.md  Tensor.h  add.cpp  add2.cpp  check_requirements.py  cling.sh  cudagrad.hpp  example.cpp  grad.cpp  graph.cpp  hello.cu  junk.cpp  main.cpp  micrograd_mul_backward.py  nn.hpp  or.cpp  run.sh  shared.cpp  shared_matmul.cu  tensor.h  test.cpp  test.sh  test2.cpp  testV1.cpp  torchy.cpp  (+3 more)
.github/workflows/: test.yml
ATen/: CMakeLists.txt  GPT.md  README.md  aten_backward.cpp  aten_equal.cpp  aten_example.cpp  aten_initialize_vector.cpp  aten_neuron.cpp  aten_slices.cpp  aten_unsafe_get_tensor_impl.cpp  include.py  run.sh
junk/: micrograd_mul_backward.py
torch/: CMakeLists.txt  aten_assignment.cpp  aten_strides.cpp  run.sh  setup.sh  torch_c_equal_a_plus_b.cpp  torch_equal.cpp
